src/lib/sandboxes/__fixtures__/typescript/syntax-error/submission/solution.ts
export function twoSum(nums: number[], target: number): number[] {
  const seen = new Map<number, number>()
  for (let i = 0; i < nums.length; i++ {  // missing closing paren
    seen.set(nums[i], i);
  }
  return [];
}
